mybril/src/snapshots/mybril__test__lvn@reassign.bril.snap
---
source: mybril/src/main.rs
expression: "format!(\"{}\\n\\n{} -> {}\\n\\n{}\", txt, orig.1, after.1,\n    bril2txt(json_after.as_str()))"
input_file: mybril/tests/examples/lvn/reassign.bril
---
@main {
  a: int = const 100;
  a: int = const 42;
  print a;
}


3 -> 2

@main {
  a: int = const 42;
  print a;
}

