mybril/src/snapshots/mybril__test__my_trivial_dce_graph@combo.bril.snap
---
source: mybril/src/main.rs
expression: "format!(\"{}\\n\\n{} -> {}\\n\\n{}\", txt, orig.1, after.1,\n    bril2txt(json_after.as_str()))"
input_file: mybril/tests/examples/tdce/combo.bril
---
# ARGS: tdce+
@main {
  a: int = const 1;
  b: int = const 2;
  c: int = add a b;
  b: int = const 3;
  d: int = add a b;
  print d;
}


6 -> 5

@main {
  a: int = const 1;
  b: int = const 2;
  b: int = const 3;
  d: int = add a b;
  print d;
}

